[package]
name = "radix-gateway-sdk"
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/borderline-labs/radix-gateway-sdk"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from"] }
futures = "0.3.31"
http = "1.2.0"
httpclient = "0.23.21"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
